fixed text-wrapping correctly on buttons

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,3 +82,7 @@
   top: 4%;
   right: 7%;
 }
+
+.text-break {
+  white-space: normal;
+}
